--- a/app/src/main/res/layout/activity_consult_msg.xml
+++ b/app/src/main/res/layout/activity_consult_msg.xml
@@ -29,22 +29,27 @@
             android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
-    <ScrollView
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="1">-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginHorizontal="20dp"-->
+<!--            android:paddingTop="20dp">-->
+
+<!--            <ListView-->
+<!--                android:id="@+id/consulmsgtlist"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"></ListView>-->
+<!--        </LinearLayout>-->
+<!--    </ScrollView>-->
+    <ListView
+        android:id="@+id/consulmsgtlist"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="20dp"
-            android:paddingTop="20dp">
-
-            <ListView
-                android:id="@+id/consulmsgtlist"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></ListView>
-        </LinearLayout>
-    </ScrollView>
+        android:layout_weight="1"></ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
