--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,6 +31,46 @@
         android:layout_marginTop="24dp"
         android:hint="请输入密码"
         android:inputType="textPassword" />
+    <EditText
+        android:id="@+id/signup_password2"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="24dp"
+        android:hint="确认密码"
+        android:inputType="textPassword" />
+    <EditText
+        android:id="@+id/signup_unit"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="24dp"
+        android:hint="单位名称"
+        android:inputType="text" />
+    <LinearLayout
+        android:layout_width="260dp"
+        android:orientation="horizontal"
+        android:layout_height="60dp"
+        android:layout_marginTop="24dp"
+        android:paddingVertical="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="驻地："
+            android:textSize="24sp"/>
+        <Spinner
+            android:id="@+id/sp1"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:background="@drawable/edittext_style"
+            />
+        <Spinner
+            android:id="@+id/sp2"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:background="@drawable/edittext_style"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
